welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: illegal start of simple pattern
var:Int l;
   ^Array1:3: error: '=' expected but ';' found.
var:Int l;
         ^Array1:4: error: illegal start of simple pattern
var:Int p;
   ^Array1:4: error: '=' expected but ';' found.
var:Int p;
         ^Array1:10: error: ';' expected but '=' found.
	T[i] = getCouleurSol;
             ^